examples/kubernetes/jwt/jwt-slef-sign.yaml
apiVersion: v1
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: envoy-fixed-response-1
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: route-1
                virtual_hosts:
                - name: direct_response_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    direct_response:
                      status: 200
                      body:
                        inline_string: "{\"keys\": [{ 		\"kty\": \"RSA\", 		\"n\": \"u1SU1LfVLPHCozMxH2Mo4lgOEePzNm0tRgeLezV6ffAt0gunVTLw7onLRnrq0_IzW7yWR7QkrmBL7jTKEn5u-qKhbwKfBstIs-bMY2Zkp18gnTxKLxoS2tFczGkPLPgizskuemMghRniWaoLcyehkd3qqGElvW_VDL5AaWTg0nLVkjRo9z-40RQzuVaE8AkAFmxZzow3x-VJYKdjykkJ0iT9wCS0DRTXu269V264Vf_3jvredZiKRkgwlL9xNAwxXFg0x_XFw005UWVRIkdgcKWTjpBP2dPwVZ4WWC-9aGVd-Gyn1o0CLelf4rEjGoXbAAEgAqeGUxrcIlbjXfbcmw\", 		\"e\": \"AQAB\", 		\"alg\": \"RS256\", 		\"use\": \"sig\" 	}] }"
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    inline_string: |
                      -----BEGIN CERTIFICATE-----
                      MIIGGjCCBAKgAwIBAgIUUjN3nbcvxjblV/R2BJpnhtwebSQwDQYJKoZIhvcNAQEN
[...]
                      ON4wM+AupJ1cTvytY/urdFd3T6e7suW9WGNH71VI
                      -----END CERTIFICATE-----
                  private_key:
                    inline_string: |
                      -----BEGIN PRIVATE KEY-----
                      MIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQCnqJe1i1niZiL1
[...]
                      tJp2pt7RHGct4OyRVNgRsFbnVDUdQbc=
                      -----END PRIVATE KEY-----
kind: ConfigMap
metadata:
  name: jwks
---
apiVersion: v1
kind: Service
metadata:
  name: jwks
  labels:
    app: jwks
    service: jwks
spec:
  ports:
    - name: http
      port: 443
      targetPort: 8443
  selector:
    app: jwks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwks
      service: jwks
  template:
    metadata:
      labels:
        app: jwks
        service: jwks
    spec:
      containers:
        - image: envoyproxy/envoy:v1.30-latest
          imagePullPolicy: IfNotPresent
          name: envoy
          ports:
            - containerPort: 8000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          volumeMounts:
            - name: jwks
              mountPath: /etc/envoy
      volumes:
        - name: jwks
          configMap:
            name: jwks
---
apiVersion: "v1"
kind: "Secret"
metadata:
  name: "jwks-tls"
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tIApNSUlGdHpDQ0E1K2dBd0lCQWdJVWNDR0tUQkxkajFmOE0rVkdyd3E4ODdBNXovNHdEUVlKS29aSWh2Y05BUUVOCkJRQXdhekVMTUFrR0ExVUVCaE1DUTA0eEVUQVBCZ05WQkFnTUNGTm9ZVzVuYUdGcE1SRXdEd1lEVlFRSERBaFQKYUdGdVoyaGhhVEVMTUFrR0ExVUVDZ3dDUlhveEVUQVBCZ05WQkFzTUNGQmxjbk52Ym1Gc01SWXdGQVlEVlFRRApEQTBxTG1SbFptRjFiSFF1YzNaak1CNFhEVEkwTURZeE5UQTRNREV4TVZvWERUTTBNRFl4TXpBNE1ERXhNVm93CmF6RUxNQWtHQTFVRUJoTUNRMDR4RVRBUEJnTlZCQWdNQ0ZOb1lXNW5hR0ZwTVJFd0R3WURWUVFIREFoVGFHRnUKWjJoaGFURUxNQWtHQT [...]
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jwt-example
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: foo
  jwt:
    providers:
      - name: example
        remoteJWKS:
          uri: https://jwks.default.svc.cluster.local
          caCertificateRefs:
            - group: ""
              kind: Secret
              name: "jwks-tls"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /foo
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /bar
